# CMake

./: README.md
01_simple/: CMakeLists.txt  README.md
02_add_library/: README.md
04_target_include_directories/: README.md
05_message/: CMakeLists.txt  README.md  main.cpp
05_message_set_/: README.md
06_list_string/: README.md
07_if_else/: README.md
08_loop/: README.md
09_function_macro/: README.md
10_cache_variable/: README.md
11_install/: CMakeLists.txt  README.md
12_find_package/: CMakeLists.txt  README.md
13_add_definitions/: README.md
14_include_directories/: README.md
15_option/: README.md
16_add_compile_options/: README.md
18_file/: README.md
19_execute_process/: README.md
doc/: 01_genel_bilgi.md  02_komut.md  03_komut.md
simple/: main.cpp
